<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imu_zupt</name>
  <version>0.0.2</version>
  <description>Zero Update Velocity Algorithm for ROS 2 Imu sensor (yaw/heading)</description>
  <author email="graziato.davide@outlook.it">Davide Graziato</author>
  <maintainer email="graziato.davide@outlook.it">Davide Graziato</maintainer>
  <maintainer email="ronca.pat@gmail.com">Patrick Roncagliolo</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
   
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rcutils</depend> 
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>  
  <depend>tf2_geometry_msgs</depend>  

  <test_depend>ament_lint_auto</test_depend>

  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
